Add Marianos and Fresh Farms. Marianos is still a WIP, but Fresh Farms is mostly working with a few bugs.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <nav>
         <menu>
           <li><a href="#aldi">Aldi</a></li>
+          <li><a href="#marianos">Marianos</a></li>
+          <li><a href="#freshfarms">Fresh Farms</a></li>
         </menu>
       </nav>
     </header>
